--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,18 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.6.3/fabric.min.js"></script>
 </head>
 <body>
-    <canvas id="canvas" width="800" height="600"></canvas>
+  <ul>
+    <button id="brush" class="btn btn-info"><img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/17.Brush-128.png" style="width: 20px; height:25px;"></button>
+    <button id="color" class="btn btn-info"><img src="http://www.fontsaddict.com/images/icons/png/2363.png" style="width:20px;height:25px;"></button>
+    <button id="erase-canvas" class="btn btn-info"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/61560-200.png" style="width:20px;height:25px;"></button>
+    <button id="undo-canvas" class="btn btn-info"><img src="http://downloadicons.net/sites/default/files/undo-icon-75426.png" style="width:20px; height:25px;"></button>
+    <button id="redo-canvas" class="btn btn-info"><img src="https://cdn0.iconfinder.com/data/icons/user-interface-6/100/ui-25-512.png" style="width:20px; height:25px;"></button>
+  </ul>
+
+    <canvas id="canvas" width="800" height="500"></canvas>
+      <button id="save-canvas" class="btn btn-info"><img src="https://cdn3.iconfinder.com/data/icons/lineo-interface/100/save-128.png" style="width:20px; height:25px;"></button>
+      <button id="clear-canvas" class="btn btn-info"><img src="https://cdn1.iconfinder.com/data/icons/pixel-perfect-at-16px-volume-1/16/5094-128.png" style="width:20px; height:25px;"></button>
+      <button id="share" class="btn btn-info"><img src="https://api.icons8.com/download/a5d38503865a8990ff38b46357345debdb740e3d/Android_L/PNG/256/Very_Basic/share-256.png" style="width:20px; height:25px;"></button>
     <script>
        (function() {
   var $ = function(id){return document.getElementById(id)};
@@ -176,7 +187,11 @@
 //     canvas.freeDrawingBrush.width = parseInt(drawingLineWidthEl.value, 10) || 1;
 //     canvas.freeDrawingBrush.shadowBlur = 0;
 //   }
+  var clearEl = $('clear-canvas');
+  clearEl.onclick = function() { canvas.clear() };
    })();
+
     </script>   
+  
 </body>
 </html>
