--- a/www/index.html
+++ b/www/index.html
@@ -3,14 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Fabric</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="index.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.6.3/fabric.min.js"></script>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
+
 </head>
 <body>
-    <canvas id="canvas" width="800" height="600"></canvas>
+<style>
+  #canvas{
+    width:100%;
+    height:100%;
+    background-color: black;
+  
+  }
+</style>
+
+<a href="browse.html">Browse</a>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.js"></script>
+
+     <div class="fixed-action-btn vertical">
+    <a class="btn-floating btn-large red">
+      <i class="large material-icons">mode_edit</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div>
+
+    <nav>
+    <div class="navbar-fixed">
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="wordgenerator.html">Prompt</a></li>
+        <!-- <li><a href="signup.html">Sign up</a></li> -->
+        <li><a href="index.html">Canvas</a></li>
+      </ul>
+    </div>
+  </nav>
+
+    <canvas id="canvas" width="360" height="575"></canvas>
     <script>
        (function() {
   var $ = function(id){return document.getElementById(id)};
-
   var canvas = this.__canvas = new fabric.Canvas('canvas', {
     isDrawingMode: true
   });
@@ -24,7 +67,7 @@
  //     drawingLineWidthEl = $('drawing-line-width'),
       // drawingShadowWidth = $('drawing-shadow-width'),
       // drawingShadowOffset = $('drawing-shadow-offset'),
-      // clearEl = $('clear-canvas');
+  //     clearEl = $('clear-canvas');
 
   // clearEl.onclick = function() { canvas.clear() };
 
