updated social page, startup screen and word generator

--- a/platforms/browser/www/canvas.html
+++ b/platforms/browser/www/canvas.html
@@ -57,7 +57,7 @@
     <canvas id="canvas" width="350" height="475"></canvas>
       <button id="save-canvas" class="btn btn-info"><img src="https://cdn3.iconfinder.com/data/icons/lineo-interface/100/save-128.png" style="width:20px; height:25px;"></button>
       <button id="clear-canvas" class="btn btn-info"><img src="https://cdn1.iconfinder.com/data/icons/pixel-perfect-at-16px-volume-1/16/5094-128.png" style="width:20px; height:25px;"></button>
-      <button id="share" class="btn btn-info"><a href="browse.html"</a><img src="https://api.icons8.com/download/a5d38503865a8990ff38b46357345debdb740e3d/Android_L/PNG/256/Very_Basic/share-256.png" style="width:20px; height:25px;"></button>
+      <button id="share" class="btn btn-info"><a href="social.html"</a><img src="https://api.icons8.com/download/a5d38503865a8990ff38b46357345debdb740e3d/Android_L/PNG/256/Very_Basic/share-256.png" style="width:20px; height:25px;"></button>
 
 
 
