--- a/platforms/browser/www/wordgenerator.html
+++ b/platforms/browser/www/wordgenerator.html
@@ -16,6 +16,7 @@
   padding: 40px 10px;
   line-height: 1.65em;
   background: url('blue.jpg');
+  /*background-size: cover;*/
   color: #fff;
   font-weight: 300;
 }
@@ -42,18 +43,18 @@ h1 {
 #button {
   height:40px;
   width: 110px;
-  background: #ADD8E6;
+  background: #0BB5FF;
     border: 0;
     color: #fff;
     font-size: 20px;
     padding: 1em 2em;
     cursor: pointer;
-    margin: 0 auto 60px;
+    margin: 0 auto 600px;
     display: block;
     text-align: center;
     border-radius: 6px;
     font-weight: bold;
-    text-decoration:none
+    text-decoration:none;
 }
 
 
