--- a/www/browse.html
+++ b/www/browse.html
@@ -149,11 +149,20 @@ small {
   <small>Lorem ipsum dolor sit amet, mei eu ipsum dolor reprimique, vis et minim vocent persequeris. Feugiat utroque id usu. Ad vim iudico voluptatibus. Nibh torquatos vel an, te agam nemore scribentur eos, at qui etiam impetus alterum. An vel harum voluptaria definitiones, mei te malorum dolores</small></p>
 </div>
 
+  <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:#ffffff;text-align: center">
+  <button id="home" class="btn btn-info" stlye="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
+</div>
+
 <script>
   $('div').on('click', function() {
       $(this).toggleClass('show-description');
   });
 </script>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.js"></script>
 
 
 </body>
