--- a/www/canvas.html
+++ b/www/canvas.html
@@ -45,19 +45,21 @@
 
 
 <ul>
-    <button id="brush" class="btn btn-info"><img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/17.Brush-128.png" style="width: 12px; height:25px;"></button>
-    <button id="color" class="btn btn-info"><img src="http://www.fontsaddict.com/images/icons/png/2363.png" style="width:12px;height:25px;"></button>
-    <button id="erase-canvas" class="btn btn-info"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/61560-200.png" style="width:12px;height:25px;"></button>
-    <button id="undo-canvas" class="btn btn-info"><img src="http://downloadicons.net/sites/default/files/undo-icon-75426.png" style="width:12px; height:25px;"></button>
-    <button id="redo-canvas" class="btn btn-info"><img src="https://cdn0.iconfinder.com/data/icons/user-interface-6/100/ui-25-512.png" style="width:12px; height:25px;"></button>
+    <button id="brush" class="btn btn-info"><img src="img/icon_brush.png" style="width: 25px; height:25px;"></button>
+    <button id="color" class="btn btn-info"><img src="img/icon_pallette.png" style="width:25px;height:25px;"></button>
+    <button id="erase-canvas" class="btn btn-info"><img src="img/icon_erase.png" style="width:25px;height:25px;"></button>
+    <button id="undo-canvas" class="btn btn-info"><img src="img/icon_undo.png" style="width:25px; height:25px;"></button>
+    <button id="redo-canvas" class="btn btn-info"><img src="img/icon_redo.png" style="width:25px; height:25px;"></button>
   </ul>
 
   <p id="word">Tree</p>
 
     <canvas id="canvas" width="350" height="475"></canvas>
-      <button id="save-canvas" class="btn btn-info"><img src="https://cdn3.iconfinder.com/data/icons/lineo-interface/100/save-128.png" style="width:20px; height:25px;"></button>
-      <button id="clear-canvas" class="btn btn-info"><img src="https://cdn1.iconfinder.com/data/icons/pixel-perfect-at-16px-volume-1/16/5094-128.png" style="width:20px; height:25px;"></button>
-      <button id="share" class="btn btn-info"><a href="social.html"</a><img src="https://api.icons8.com/download/a5d38503865a8990ff38b46357345debdb740e3d/Android_L/PNG/256/Very_Basic/share-256.png" style="width:20px; height:25px;"></button>
+        <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:#ffffff;text-align: center">
+  <button id="home" class="btn btn-info" stlye="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
+</div>
 
 
 
