--- a/www/social.html
+++ b/www/social.html
@@ -133,9 +133,12 @@ a {
       <li><i class="fa fa-vine"></i></li>
       <li><i class="fa fa-linkedin"></i></li>
     </ul> 
-    <br/>
-      <h3><a href="browse.html"</a>Tyles</h3>
-    <a href="browse.html">Continue Browsing</a>
   </section>
+
+  <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:#ffffff;text-align: center">
+  <button id="home" class="btn btn-info" stlye="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
+</div>
 </body>
 </html>
