--- a/www/social.html
+++ b/www/social.html
@@ -5,6 +5,13 @@
   <!--fonts-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
+</head>
 </head>
 <body>
 <style>
@@ -135,10 +142,10 @@ a {
     </ul> 
   </section>
 
-  <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:#ffffff;text-align: center">
-  <button id="home" class="btn btn-info" stlye="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
-  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
-  <button id="share" class="btn btn-info"stlye="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
+  <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:;text-align: center">
+  <button id="home" class="btn btn-info" style="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info" style="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info" style="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
 </div>
 </body>
 </html>
