--- a/www/browse.html
+++ b/www/browse.html
@@ -3,6 +3,7 @@
  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="js/browser.js" />
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,7 +13,7 @@
  <body>
       <script type="text/javascript" src="js/materialize.min.js"></script>
 
-  <div class="card">
+  <!-- <div class="card">
     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-2.jpg">
     </div>
@@ -90,13 +91,15 @@
       <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right"><a href="canvas.html">mode_edit</a></i></span>
     </div>
     
-  </div>
+  </div> -->
 
    <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:;text-align: center">
   <button id="home" class="btn btn-info" stlye="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
   <button id="share" class="btn btn-info"stlye="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
   <button id="share" class="btn btn-info"stlye="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
 </div>
+
+<script type="text/javascript" src="js/browser.js"></script>
  </body>
 
 
