completed browsing page with ability to edit others work

--- a/www/social.html
+++ b/www/social.html
@@ -144,7 +144,7 @@ a {
     </ul> 
   </section>
 
- <a href="browse2.html">Share in Tyles</a>
+ <a href="browse.html">Share in Tyles</a>
 
   <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:;text-align: center">
   <button id="home" class="btn btn-info" style="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
