select different colors

--- a/www/canvas2.html
+++ b/www/canvas2.html
@@ -45,7 +45,7 @@
     <button id="undo-canvas" class="btn btn-info"><img src="img/icon_undo.png" style="width:12px; height:25px;"></button>
     <button id="redo-canvas" class="btn btn-info"><img src="img/icon_redo.png" style="width:12px; height:25px;"></button>
   </ul>
-  <ul id="brush-colors" style="position:absolute; top:40px; display:inline">
+  <ul id="brush-colors" style="position:; top:40px; display:inline">
     <button id="black-color" class="btn btn-info" style="background:#000;"></button>
     <button id="red-color" class="btn btn-info" style="background:#F00;"></button>
     <button id="blue-color" class="btn btn-info" style="background:#00F;"></button>
