--- a/www/canvas.html
+++ b/www/canvas.html
@@ -44,7 +44,7 @@
     <button id="undo-canvas" class="btn btn-info"><img src="img/icon_undo.png" style="width:12px; height:25px;"></button>
     <button id="redo-canvas" class="btn btn-info"><img src="img/icon_redo.png" style="width:12px; height:25px;"></button>
   </ul>
-  <div id="brush-colors-div" style="position:absolute; top:40px; display:inline">
+  <div id="brush-colors-div" style="position:; top:40px; display:inline">
   <ul id="brush-colors">
     <button id="black-color" class="btn btn-info" style="background:#000;"></button>
     <button id="red-color" class="btn btn-info" style="background:#F00;"></button>
