--- a/www/social.html
+++ b/www/social.html
@@ -41,10 +41,10 @@ hr {
     border-color: rgba(255, 255, 255, 0.8);
     width: 40%;
 }
-a {
- color:#ddd;
- font-size: 36px; 
- text-align: center;
+.share {
+text-align: center;
+color:#ddd;
+font-size: 32px; 
 }
 
 /*IGNORE ALL THE ABOVE*/
@@ -144,7 +144,7 @@ a {
     </ul> 
   </section>
 
- <a href="browse.html">Share in Tyles</a>
+ <a class="share" href="browse.html">Share in Tyles</a>
 
   <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:;text-align: center">
   <button id="home" class="btn btn-info" style="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
