--- a/platforms/android/assets/www/canvas2.html
+++ b/platforms/android/assets/www/canvas2.html
@@ -27,7 +27,7 @@
     }
     
     #word{
-      font-size: 30px;
+      font-size: 24px;
     }
   </style>
 <!-- <FORM NAME="WordForm" ACTION="index.html">  
@@ -37,7 +37,7 @@
 <a href="search.html">Search</a>
 <a href="wordgenerator.html">Search</a> -->
 
-
+<div style="position:relative;">
 <ul>
     <button id="brush" class="btn btn-info"><img src="img/icon_brush.png" style="width: 12px; height:25px;"></button>
     <button id="color" class="btn btn-info"><img src="img/icon_pallette.png" style="width:12px;height:25px;"></button>
@@ -45,8 +45,16 @@
     <button id="undo-canvas" class="btn btn-info"><img src="img/icon_undo.png" style="width:12px; height:25px;"></button>
     <button id="redo-canvas" class="btn btn-info"><img src="img/icon_redo.png" style="width:12px; height:25px;"></button>
   </ul>
+  <ul id="brush-colors" style="position:; top:40px; display:inline">
+    <button id="black-color" class="btn btn-info" style="background:#000;"></button>
+    <button id="red-color" class="btn btn-info" style="background:#F00;"></button>
+    <button id="blue-color" class="btn btn-info" style="background:#00F;"></button>
+    <button id="green-color" class="btn btn-info" style="background:#0F0;"></button>
+    <button id="yellow-color" class="btn btn-info" style="background:#FF0;"></button>
+  </ul>
+  </div>
 
-
+  <p id="word">Tree</p>
 
   <canvas id="canvas" width="350" height="410"></canvas>
   
@@ -113,6 +121,40 @@
         // and checking if object's "name" is preserved
         console.log(canvas.item(0).name);
       });
+  }
+
+  $('brush').onclick = function() {
+    var colorsEl = $('brush-colors');
+    console.log(colorsEl.style.visibility);
+    if (colorsEl.style.visibility = "visible") {
+      colorsEl.style.visibility = "hidden";
+    } else {
+      colorsEl.style.visibility = "visible";
+    }
+  }
+
+  $('black-color').onclick = function() {
+    changeColor('#000');
+  }
+
+  $('red-color').onclick = function() {
+    changeColor('#F00');
+  }
+
+  $('blue-color').onclick = function() {
+    changeColor('#00F');
+  }
+
+  $('green-color').onclick = function() {
+    changeColor('#0F0');
+  }
+
+  $('yellow-color').onclick = function() {
+    changeColor('#FF0');
+  }
+
+  var changeColor = function(color) {
+    canvas.freeDrawingBrush.color = color;
   }
 
   // drawingModeEl.onclick = function() {
@@ -233,7 +275,7 @@
     
     if (canvas.freeDrawingBrush) {
       canvas.freeDrawingBrush.color = "#000";
-      canvas.freeDrawingBrush.width = 18;
+      canvas.freeDrawingBrush.width = 15;
       canvas.freeDrawingBrush.shadowBlur = 0;
     }
 
