--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -87,6 +87,14 @@ h3 {
   <span class="away">Get Started</span>
 </a>
 
+<a href="browse.html"></a>
+<a href="canvas.html"></a>
+<a href="canvas2.html"></a>
+<a href="gallery.html"></a>
+<a href="social.html"></a>
+<a href="wordgenerator.html"></a>
+<a href="spec.html"></a>
+
 		</body>
 	</head>
 </html>
